# amsg-web

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/amsg/: __init__.py  __main__.py  btc_csv.py  bundle.py  campaign.py  candidate_conversion.py  config.py  control_summary.py  demo.py  earth.py  events_overlap.py  evidence_summary.py  geomag.py  hapi.py  holdout_catalog.py  inspect.py  io.py  meteo.py  nmdb.py  nmdb_quality_scan.py  omni.py  omni_btc.py  omni_nmdb.py  omni_pageviews.py  pageviews.py  pipeline.py  quality_scan.py  seismic.py  surprise.py  swpc.py  time_utils.py  tokenize.py  transforms.py  usgs.py
backend/app/api/routes/: analysis.py  analyze.py  sources.py
backend/app/core/: config.py  jobs.py
backend/app/schemas/: analyze.py  results.py  sources.py
backend/app/services/: pipeline_runner.py  source_registry.py
backend/tests/: test_api_smoke.py
docs/screenshots/: README.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: app-shell.tsx  footer.tsx  header.tsx  theme-provider.tsx  (+1 more)
frontend/src/lib/: api.ts  queryClient.ts  types.ts  utils.ts
frontend/src/routes/: NotFoundPage.tsx  router.tsx
frontend/src/stores/: analysisHistory.ts
(+30 files in other folders)
